[gd_scene load_steps=8 format=3 uid="uid://45sutxaorojg"]

[ext_resource type="Script" uid="uid://g6sxccoxfgvk" path="res://scenes/ui/popups/settings_popup.gd" id="1_j3d0t"]
[ext_resource type="Texture2D" uid="uid://b6rwwby1oh8r5" path="res://assets/icons/icon-close-small.svg" id="2_qr1kp"]

[sub_resource type="ButtonGroup" id="ButtonGroup_qr1kp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j3d0t"]
bg_color = Color(0.188235, 0.188235, 0.188235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qr1kp"]
bg_color = Color(0.0941176, 0.0941176, 0.0941176, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8

[sub_resource type="LabelSettings" id="LabelSettings_82w2s"]
font_size = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qr1kp"]

[node name="SettingsPopup" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1000.0
offset_bottom = 625.0
script = ExtResource("1_j3d0t")
button_group = SubResource("ButtonGroup_qr1kp")

[node name="BgPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j3d0t")

[node name="VBoxContainer" type="VBoxContainer" parent="BgPanel"]
layout_mode = 2

[node name="TopBar" type="PanelContainer" parent="BgPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qr1kp")

[node name="MarginContainer" type="MarginContainer" parent="BgPanel/VBoxContainer/TopBar"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="HBoxContainer" type="HBoxContainer" parent="BgPanel/VBoxContainer/TopBar/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BgPanel/VBoxContainer/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Gosub Settings"
label_settings = SubResource("LabelSettings_82w2s")

[node name="Control" type="Control" parent="BgPanel/VBoxContainer/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="BgPanel/VBoxContainer/TopBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_qr1kp")
icon = ExtResource("2_qr1kp")
flat = true

[node name="Layout" type="HBoxContainer" parent="BgPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="LeftBoxMargin" type="MarginContainer" parent="BgPanel/VBoxContainer/Layout"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="CategoryVBox" type="VBoxContainer" parent="BgPanel/VBoxContainer/Layout/LeftBoxMargin"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
theme_override_constants/separation = 6

[node name="ContentMargin" type="MarginContainer" parent="BgPanel/VBoxContainer/Layout"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="ScrollContainer" type="ScrollContainer" parent="BgPanel/VBoxContainer/Layout/ContentMargin"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="ItemsVBox" type="VBoxContainer" parent="BgPanel/VBoxContainer/Layout/ContentMargin/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4
